Thu Jul 18 21:15:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_equal): compare RARRAY_PTR() for performance
	  improvement in case of that self and other are shared.

Thu Jul 18 20:44:51 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_fill): use memfill().

Thu Jul 18 20:35:14 2013  Benoit Daloze  <eregontp@gmail.com>

	* array.c (rb_ary_count): check length to avoid SEGV
	  while iterating. Remove other pointer loop when arg is given.

	* test/ruby/test_array.rb (test_count): add test for bug.
	  [ruby-core:56072] [Bug #8654]

Thu Jul 18 18:14:36 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* array.c (rb_ary_count): iterate items appropriately.
	  [Bug #8654]

Thu Jul 18 17:35:41 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* hash.c (rb_hash_flatten): performance improvement by not using
	  rb_hash_to_a() to avoid array creation with rb_assoc_new().

Thu Jul 18 16:16:17 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: add logging feature for RGenGC's write barrier unprotect
	  event.

Thu Jul 18 15:45:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (RUBY_SAFE_LEVEL_CHECK): make only
	  rb_set_safe_level(4) an error always but make rb_secure(4) an error
	  only in the core.  [ruby-dev:47517] [Bug #8652]

Thu Jul 18 15:42:01 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: fix spell miss.

Thu Jul 18 15:11:11 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_safe_level_4): get rid of special
	  character.  [ruby-dev:47512] [misc #8646]

Thu Jul 18 14:51:39 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c (ary_alloc): slim setup process.

Thu Jul 18 14:37:57 2013  Koichi Sasada  <ko1@atdot.net>

	* string.c (str_alloc): no need to clear RString (already cleared).

Thu Jul 18 12:57:47 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (BDIGITS_ZERO): Defined.
	  (bary_pack): Use BDIGITS_ZERO.
	  (bary_unpack): Ditto.
	  (bary_mul_single): Ditto.